--- a/jsignpdf/pom.xml
+++ b/jsignpdf/pom.xml
@@ -126,5 +126,11 @@
             <artifactId>jjwt-api</artifactId>
             <version>0.11.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.undertow/undertow-core -->
+        <dependency>
+            <groupId>io.undertow</groupId>
+            <artifactId>undertow-core</artifactId>
+            <version>2.3.5.Final</version>
+        </dependency>
     </dependencies>
 </project>
